spacing issue on turnkey page

--- a/app/scss/components/_nav.scss
+++ b/app/scss/components/_nav.scss
@@ -193,7 +193,7 @@
     padding-top: 2rem;
     position: absolute;
     z-index: 999;
-    top: -70px;
+    top: -120px;
     left: 50%;
     opacity: 0;
     transform: translate(-50%, 40%);
